[gd_scene load_steps=6 format=3 uid="uid://drop5ptepg5rb"]

[ext_resource type="Script" uid="uid://c50h160mqhm2b" path="res://scripts/base_card.gd" id="1_unfoy"]
[ext_resource type="Texture2D" uid="uid://qgys0ouhv1vs" path="res://images/cover.png" id="2_ewi80"]
[ext_resource type="Script" uid="uid://c47b3bfjpsxs0" path="res://scripts/card_sprite.gd" id="3_wivmf"]
[ext_resource type="Script" uid="uid://dl6jem0us7ohm" path="res://scripts/card_body.gd" id="4_ya72j"]

[sub_resource type="BoxShape3D" id="BoxShape3D_s4mse"]
margin = 0.0
size = Vector3(0.54, 0.81, 0.01)

[node name="BaseCard" type="Node3D"]
script = ExtResource("1_unfoy")

[node name="Sprite" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.001)
pixel_size = 0.0006
texture = ExtResource("2_ewi80")
script = ExtResource("3_wivmf")

[node name="Body" type="StaticBody3D" parent="Sprite"]
script = ExtResource("4_ya72j")

[node name="Collision" type="CollisionShape3D" parent="Sprite/Body"]
shape = SubResource("BoxShape3D_s4mse")

[node name="CoverSprite" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.001)
pixel_size = 0.0006
texture = ExtResource("2_ewi80")

[connection signal="input_event" from="Sprite/Body" to="Sprite/Body" method="_on_input_event"]
[connection signal="mouse_entered" from="Sprite/Body" to="Sprite/Body" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Sprite/Body" to="Sprite/Body" method="_on_mouse_exited"]
